- event mode reduction for SPZ
- Display SLD profile for first structure in MixedReflectModel
- Github: changed the default branch from master to main. This is done to
  match other repositories behaviour and to reduce cognitive load.
- Added a Parameter.corner method to plot the posterior distribution for a
  given Parameter.
- Fixed a bug in MixedSlab

0.1.33
------
- upgrade to PyQt6. PyQt6 is currently only available as a wheel from PyPI,
  to be installed by e.g. pip. There are currently no conda packages for PyQt6.
  PyQt6 enables the gui to be used on macosx_arm64, there are no PyQt5 wheels
  available on that platform.
- further modification to use qtpy. qtpy is a shim that allows either
  PyQt6 or Pyside6 to be used to run the refnx GUI. qtpy is a new dependency
  for running the GUI.
- add Objective._generate_generative_mcmc to yield fit curves corresponding
  to MCMC samples.
- add Structure._generate_sld_profile_mcmc to yield sld profiles corresponding
  to MCMC samples.

0.1.34
------
- Fix bug in ManualBeamFinder
- Fix bug in refnx GUI regarding checkbox selection.

0.1.35
------
- only extract requested keys from catalogue
- enable cython3 operations
- change install docs to recommend use of refnx[all]
- update SPZ reduction for new detector translation

0.1.36
------
- rudimentary HDF <-> Data1D interconversion. This is functionality that might
  be subject to change, so the functions are prefixed by "_".
- added TOF simulation to reduction code.
- print out the fitting statistic in a tqdm progress bar.

0.1.37
------
- automated the release to PyPI via Github Actions.
- removed setup.cfg, transferring all information to pyproject.toml.
- fixed various scipy DeprecationWarnings related to keyword only arguments.
- converted various os.path to pathlib.Path
- stopped writing xml output (nobody uses it?)
- added detailed resolution kernel calculation (writes out an HDF file)
- removed np.asfarray usage, it's deprecated.
- updated emcee vendored code.